--- a/index.html
+++ b/index.html
@@ -120,16 +120,15 @@
             width: 200px;
             height: 200px;
             margin: 0 auto 48px;
-            background: rgba(255, 255, 255, 0.95);
             border-radius: 50%;
             display: flex;
             align-items: center;
             justify-content: center;
-            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.3);
             background-image: url('./logo.png');
-            background-size: 60%;
+            background-size: 80%;
             background-repeat: no-repeat;
             background-position: center;
+            background-color: transparent;
         }
 
         .hero h1 {
