--- a/index.html
+++ b/index.html
@@ -48,16 +48,20 @@
         .logo-section {
             display: flex;
             align-items: center;
-            gap: 12px;
+            gap: 6px;
         }
 
         .logo-mark {
             width: 32px;
             height: 32px;
-            background-image: url('./logo.png');
+            background-image: url('logo.png');
             background-size: contain;
             background-repeat: no-repeat;
             background-position: center;
+            /* Remove background and border styles for blending */
+            background-color: transparent;
+            box-shadow: none;
+            border-radius: 0;
         }
 
         .brand-name {
@@ -120,15 +124,18 @@
             width: 200px;
             height: 200px;
             margin: 0 auto 48px;
-            border-radius: 50%;
+            background: none; /* Remove white background */
+            border-radius: 50%; /* Optional: keep if logo is round */
             display: flex;
             align-items: center;
             justify-content: center;
-            background-image: url('./logo.png');
-            background-size: 80%;
+            box-shadow: none;  /* Remove or soften shadow */
+            background-image: url('logo.png');
+            background-size: 60%;
             background-repeat: no-repeat;
             background-position: center;
-            background-color: transparent;
+            opacity: 0.95; /* Optional: add a subtle transparency */
+
         }
 
         .hero h1 {
