--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
         }
 
         .hero-logo {
-            width: 200px;
-            height: 200px;
-            margin: 0 auto 48px;
+            width: 300px;           /* Changed from 200px */
+            height: 300px;          /* Changed from 200px */
+            margin: 0 auto 24px;    /* Changed from 48px */
             background: none; /* Remove white background */
             border-radius: 50%; /* Optional: keep if logo is round */
             display: flex;
