--- a/index.html
+++ b/index.html
@@ -592,7 +592,11 @@
                     </ul>
                 </div>
                 <div class="values-visual fade-in">
-                    🌟
+                    <div style="width: 100px; height: 100px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                        <svg width="60" height="60" viewBox="0 0 60 60" fill="white">
+                            <path d="M30 5 L35 20 L50 20 L38 30 L43 45 L30 37 L17 45 L22 30 L10 20 L25 20 Z" fill="white"/>
+                        </svg>
+                    </div>
                 </div>
             </div>
         </div>
