--- a/index.html
+++ b/index.html
@@ -592,10 +592,11 @@
                     </ul>
                 </div>
                 <div class="values-visual fade-in">
-                    <div style="width: 100px; height: 100px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 20px; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                        <svg width="60" height="60" viewBox="0 0 60 60" fill="white">
-                            <path d="M30 5 L35 20 L50 20 L38 30 L43 45 L30 37 L17 45 L22 30 L10 20 L25 20 Z" fill="white"/>
-                        </svg>
+                    <div style="width: 200px; height: 200px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 24px; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
+                        <!-- Custom image will go here -->
+                        <div style="width: 120px; height: 120px; background: rgba(255,255,255,0.2); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: white; font-size: 14px; text-align: center;">
+                            Your Custom<br>Image Here
+                        </div>
                     </div>
                 </div>
             </div>
