--- a/index.html
+++ b/index.html
@@ -610,38 +610,27 @@
                 <div class="footer-section">
                     <h4>Products</h4>
                     <ul class="footer-links">
-                        <li><a href="#">Learning Games</a></li>
-                        <li><a href="#">Story Books</a></li>
-                        <li><a href="#">Research Library</a></li>
-                        <li><a href="#">Parent Resources</a></li>
-                        <li><a href="#">Coming Soon</a></li>
+                        <li><a href="learning-games.html">Learning Games</a></li>
+                        <li><a href="story-books.html">Story Books</a></li>
+                        <li><a href="research-library.html">Research Library</a></li>
+                        <li><a href="parent-resources.html">Parent Resources</a></li>
+                        <li><a href="newsletter.html">Coming Soon</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
                     <h4>Company</h4>
                     <ul class="footer-links">
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Our Mission</a></li>
-                        <li><a href="#">Careers</a></li>
-                        <li><a href="#">Press</a></li>
+                        <li><a href="#about">About Us</a></li>
+                        <li><a href="#about">Our Mission</a></li>
+                        <li><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="footer-section">
-                    <h4>Support</h4>
+                    <h4>Newsletter</h4>
                     <ul class="footer-links">
-                        <li><a href="#">Help Center</a></li>
-                        <li><a href="#">Contact Us</a></li>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">Terms of Service</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Connect</h4>
-                    <ul class="footer-links">
-                        <li><a href="#">Newsletter</a></li>
-                        <li><a href="#">Twitter</a></li>
-                        <li><a href="#">LinkedIn</a></li>
-                        <li><a href="#">GitHub</a></li>
+                        <li><a href="newsletter.html">Subscribe for Updates</a></li>
+                        <li><a href="newsletter.html">Latest News</a></li>
+                        <li><a href="newsletter.html">Educational Tips</a></li>
                     </ul>
                 </div>
             </div>
