--- a/index.html
+++ b/index.html
@@ -592,11 +592,7 @@
                     </ul>
                 </div>
                 <div class="values-visual fade-in">
-                    <div style="width: 200px; height: 200px; background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); border-radius: 24px; display: flex; align-items: center; justify-content: center; margin: 0 auto;">
-                        <!-- Custom image will go here -->
-                        <div style="width: 120px; height: 120px; background: rgba(255,255,255,0.2); border-radius: 16px; display: flex; align-items: center; justify-content: center; color: white; font-size: 14px; text-align: center;">
-                            Your Custom<br>Image Here
-                        </div>
+                    <div style="width: 100%; height: 400px; background-image: url('value-image.png'); background-size: contain; background-repeat: no-repeat; background-position: center; border-radius: 24px;">
                     </div>
                 </div>
             </div>
