--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<div class="values-<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -592,7 +592,7 @@
                     </ul>
                 </div>
                 <div class="values-visual fade-in">
-                    <div style="width: 100%; height: 400px; background-image: url('value-image.png'); background-size: contain; background-repeat: no-repeat; background-position: center; border-radius: 24px;">
+                    <div style="width: 100%; height: 400px; background-image: url('values-image.png'); background-size: contain; background-repeat: no-repeat; background-position: center; border-radius: 24px;">
                     </div>
                 </div>
             </div>
