--- a/index.html
+++ b/index.html
@@ -371,14 +371,16 @@
         }
 
         .values-visual {
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: none;
             border-radius: 24px;
             height: 400px;
             display: flex;
             align-items: center;
             justify-content: center;
-            font-size: 120px;
-            color: rgba(255, 255, 255, 0.8);
+            background-image: url('https://raw.githubusercontent.com/PeraByteLabs/perabytelabs.github.io/main/values-image.png');
+            background-size: contain;
+            background-repeat: no-repeat;
+            background-position: center;
         }
 
         /* Footer */
@@ -592,8 +594,6 @@
                     </ul>
                 </div>
                 <div class="values-visual fade-in">
-                    <div style="width: 100%; height: 400px; background-image: url('values-image.png'); background-size: contain; background-repeat: no-repeat; background-position: center; border-radius: 24px;">
-                    </div>
                 </div>
             </div>
         </div>
