--- a/index.html
+++ b/index.html
@@ -373,14 +373,15 @@
         .values-visual {
             background: none;
             border-radius: 24px;
-            height: 400px;
+            height: 100%;
             display: flex;
             align-items: center;
             justify-content: center;
             background-image: url('https://raw.githubusercontent.com/PeraByteLabs/perabytelabs.github.io/main/values-image.png');
-            background-size: contain;
+            background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
+            min-height: 400px;
         }
 
         /* Footer */
