--- a/index.html
+++ b/index.html
@@ -310,6 +310,25 @@
         .values {
             background: #f5f5f7;
             padding: 120px 0;
+            position: relative;
+            overflow: hidden;
+        }
+
+        .values::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: radial-gradient(ellipse at 30% 50%, rgba(102, 126, 234, 0.05) 0%, transparent 50%),
+                        radial-gradient(ellipse at 70% 80%, rgba(118, 75, 162, 0.03) 0%, transparent 50%);
+            pointer-events: none;
+        }
+
+        .values .container {
+            position: relative;
+            z-index: 2;
         }
 
         .values-grid {
@@ -317,6 +336,16 @@
             grid-template-columns: repeat(2, 1fr);
             gap: 80px;
             align-items: center;
+            perspective: 1000px;
+        }
+
+        .values-content {
+            transform: translateZ(50px);
+            transition: transform 0.6s ease;
+        }
+
+        .values-content:hover {
+            transform: translateZ(60px) translateX(-5px);
         }
 
         .values-content h2 {
@@ -325,6 +354,7 @@
             color: #1d1d1f;
             margin-bottom: 32px;
             letter-spacing: -0.025em;
+            text-shadow: 0 2px 10px rgba(0, 0, 0, 0.03);
         }
 
         .values-list {
@@ -337,6 +367,20 @@
             align-items: flex-start;
             gap: 16px;
             margin-bottom: 24px;
+            padding: 16px;
+            background: rgba(255, 255, 255, 0.6);
+            border-radius: 16px;
+            backdrop-filter: blur(10px);
+            border: 1px solid rgba(255, 255, 255, 0.2);
+            box-shadow: 0 8px 32px rgba(0, 0, 0, 0.04);
+            transition: all 0.4s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+            transform: translateZ(0);
+        }
+
+        .values-list li:hover {
+            transform: translateY(-8px) translateZ(20px);
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.12);
+            background: rgba(255, 255, 255, 0.8);
         }
 
         .value-icon {
@@ -349,6 +393,13 @@
             justify-content: center;
             flex-shrink: 0;
             margin-top: 4px;
+            box-shadow: 0 4px 12px rgba(102, 126, 234, 0.3);
+            transition: all 0.3s ease;
+        }
+
+        .values-list li:hover .value-icon {
+            transform: scale(1.1) rotateZ(5deg);
+            box-shadow: 0 8px 25px rgba(102, 126, 234, 0.4);
         }
 
         .value-text {
@@ -382,6 +433,33 @@
             background-repeat: no-repeat;
             background-position: center;
             min-height: 400px;
+            box-shadow: 0 20px 60px rgba(0, 0, 0, 0.15);
+            position: relative;
+            overflow: hidden;
+            transform: translateZ(30px);
+            transition: all 0.6s cubic-bezier(0.25, 0.46, 0.45, 0.94);
+        }
+
+        .values-visual::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: linear-gradient(135deg, rgba(102, 126, 234, 0.1) 0%, rgba(118, 75, 162, 0.1) 100%);
+            border-radius: 24px;
+            opacity: 0;
+            transition: opacity 0.4s ease;
+        }
+
+        .values-visual:hover {
+            transform: translateZ(50px) translateY(-10px);
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.2);
+        }
+
+        .values-visual:hover::before {
+            opacity: 1;
         }
 
         /* Footer */
